--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,14 @@
       mobile apps KSD is ready to code your insiprations to life!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  </head>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title> Krotzer Software Development - KSD </title>
   </head>
   <body>
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
